cider/.svn/pristine/6a/6abe09f9c33131176237d63504dbf326e9d83a29.svn-base

CS:APP Malloc Lab: Grading Sheet for mm-cider.c

Part 1: Compiling the driver

gcc -Wall -O2 -m32   -c -o mdriver.o mdriver.c
mdriver.c: In function ‘remove_range’:
mdriver.c:438:9: warning: variable ‘size’ set but not used [-Wunused-but-set-variable]
     int size;
         ^
gcc -Wall -O2 -m32   -c -o mm.o mm.c
mm.c: In function ‘moveStart’:
mm.c:101:14: warning: dereferencing ‘void *’ pointer [enabled by default]
   char *bp = *ptr;
              ^
mm.c:101:14: error: void value not ignored as it ought to be
mm.c:30:43: warning: assignment makes integer from pointer without a cast [enabled by default]
 #define PUT(p, val) (*(unsigned int *)(p) = (val)) // Write word to addr p
                                           ^
mm.c:104:5: note: in expansion of macro ‘PUT’
     PUT(bp, EoL);        //puts EoL in forward pointer
     ^
mm.c:30:43: warning: assignment makes integer from pointer without a cast [enabled by default]
 #define PUT(p, val) (*(unsigned int *)(p) = (val)) // Write word to addr p
                                           ^
mm.c:105:5: note: in expansion of macro ‘PUT’
     PUT(bp + WSIZE, EoL);//and in backward pointer
     ^
mm.c:30:43: warning: assignment makes integer from pointer without a cast [enabled by default]
 #define PUT(p, val) (*(unsigned int *)(p) = (val)) // Write word to addr p
                                           ^
mm.c:108:5: note: in expansion of macro ‘PUT’
     PUT(bp + WSIZE, EoL);
     ^
mm.c:30:43: warning: assignment makes integer from pointer without a cast [enabled by default]
 #define PUT(p, val) (*(unsigned int *)(p) = (val)) // Write word to addr p
                                           ^
mm.c:109:5: note: in expansion of macro ‘PUT’
     PUT(bp, freeStart);
     ^
mm.c: In function ‘fwdPointers’:
mm.c:116:14: warning: dereferencing ‘void *’ pointer [enabled by default]
   char *bp = *ptr;
              ^
mm.c:116:14: error: void value not ignored as it ought to be
mm.c: In function ‘place’:
mm.c:187:5: error: too few arguments to function ‘fwdPointers’
     fwdPointers(); //Reassigns pointers
     ^
mm.c:114:6: note: declared here
 void fwdPointers(void *ptr){ //removes allocated block at bp from free list
      ^
mm.c:194:5: error: too few arguments to function ‘fwdPointers’
     fwdPointers();      
     ^
mm.c:114:6: note: declared here
 void fwdPointers(void *ptr){ //removes allocated block at bp from free list
      ^
mm.c:198:5: error: too few arguments to function ‘moveStart’
     moveStart();
     ^
mm.c:99:6: note: declared here
 void moveStart(void *ptr){//puts thing at pointer bp in front of free list
      ^
make: *** [mm.o] Error 1
grade-malloclab.pl: ERROR: Unable to compile mdriver. The files are in /tmp/mm-cider.c.3371.
